ctm-sf-homeloan-app/main/default/objects/CreditEnquiry__c/CreditEnquiry__c.object-meta.xml
<CustomObject>
    <label>Credit Enquiry</label>
    <nameField>
        <displayFormat>CE - {000000000}</displayFormat>
        <label>Credit Enquiry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Enquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>