ctm-sf-homeloan-app/main/default/objects/CreditEnquiry__c/fields/CreditScore__c.field-meta.xml
<CustomField>
    <fullName>CreditScore__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Credit Score</label>
    <referenceTo>CreditScore__c</referenceTo>
    <relationshipLabel>Credit Enquiries</relationshipLabel>
    <relationshipName>Credit_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>